--- a/Form1.resx
+++ b/Form1.resx
@@ -148,6 +148,9 @@
         AAAAAAAAgAEAAA==
 </value>
   </data>
+  <metadata name="ContextMenuStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>216, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAYAAAAAAAEAIACUQAEAZgAAAICAAAABACAAKAgBAPpAAQBAQAAAAQAgAChCAAAiSQIAMDAAAAEA
